test-engine.spec.ts component completed

--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -6,7 +6,10 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-devkitflow = "AsjZ3kWAUSQRNt2pZVeJkywhZ6gpLpHZmJjduPmKZDZZ"
+test_engine = "DRtryNc2GJrhytBQK9STjphH5wyNopKuzne34kgdbLgx"
+chain_watch = "8wq6TVhdTeWiUWXib3vxJguDE9Nm3dmV99YxFCWL3WEe"
+deploy_guard = "HK7zp26LDVy8jMbBDf8o4RuuSjYU9SUv6V47icSrw1bf"
+devkitflow = "AmgAyoVm4Ua84UkGPSJtpK2QUAhHz9C7dNA9114iG4L3"
 
 [registry]
 url = "https://api.apr.dev"
@@ -16,7 +19,8 @@ cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "../node_modules/.bin/jest --preset ts-jest"
+test = "npx ts-mocha -p ./tsconfig.json tests/**/*.ts --timeout 60000"
+
 
 [test]
 startup_wait = 5000
