--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
+    "@types/chai": "^5.0.1",
     "@types/jest": "^29.0.3",
+    "@types/mocha": "^10.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "anchor-bankrun": "^0.5.0",
+    "chai": "^5.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.0.3",
+    "mocha": "^10.8.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.0.2",
